--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,41 +30,17 @@ jobs:
       - name: Check out
         uses: actions/checkout@v3
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/audiobookshelf,ghcr.io/${{ github.repository_owner }}/audiobookshelf
-          tags: |
-            type=edge,branch=master
-            type=semver,pattern={{version}}
-
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
+      - name: Login DockerHub
+        uses: docker/login-action@v1
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Login to Dockerhub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Login to ghcr
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Release version
         id: release_version
@@ -72,19 +48,15 @@ jobs:
           app_version=$(grep version package.json | sed -e 's/\s*"version":\s"\(.*\)",/\1/g')
           echo "app_version=$app_version" >> $GITHUB_ENV
 
-      - name: Build image
-        uses: docker/build-push-action@v3
+      - name: Build Image
+        uses: docker/build-push-action@v2
         with:
-          tags: |
-             ${{ secrets.DOCKER_USERNAME }}/audiobookshelf:latest
-             ${{ secrets.DOCKER_USERNAME }}/audiobookshelf:${{ env.app_version }}
-          context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          context: docker
+          file: docker/Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64
           push: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/audiobookshelf:latest
+            ${{ secrets.DOCKER_USERNAME }}/audiobookshelf:${{ env.app_version }}
