--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,32 +27,38 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Check out
-        uses: actions/checkout@v3
+      -
+        name: Checkout
+        uses: actions/checkout@master
 
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Release version
+      -
+        name: Release version
         id: release_version
         run: |
           app_version=$(grep version package.json | sed -e 's/\s*"version":\s"\(.*\)",/\1/g')
           echo "app_version=$app_version" >> $GITHUB_ENV
 
-      - name: Build Image
+      -
+        name: Set Up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      -
+        name: Set Up Buildx
+        uses: docker/setup-buildx-action@v1
+
+      -
+        name: Login DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - 
+        name: Build Image
         uses: docker/build-push-action@v2
         with:
-          context: docker
-          file: docker/Dockerfile
+          context: .
+          file: Dockerfile
           platforms: |
             linux/amd64
             linux/arm64
